<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nama"/>

        <EditText
            android:id="@+id/edit"
            android:layout_width="376dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="5dp"
            android:hint="@string/hintnama"
            android:paddingHorizontal="15dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="15dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/hintuser"/>

    </LinearLayout>

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_btn"
        android:text="@string/button2"/>


</LinearLayout>

